<resources>
    <string name="app_name">UHBooks</string>
    <string name="action_student">Student</string>
    <string name="action_instructor">Instructor</string>
    <string name="action_login">login</string>
    <string name="action_logout">logout</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="welcome">Welcome</string>
    <string name="connection_fail">Connection Failed</string>
    <string name="internet_not_available">Internet is not available</string>
    <string name="please_confirm_your_connection">Please confirm your internet connection</string>
    <string name="error">Error</string>
    <string name="unknown_error">Unkown Error</string>
    <string name="action_favorite">Favorite</string>
    <string name="hint_password">password</string>
    <string name="hint_username">username</string>
</resources>